--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/svg/
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/svg/
+    - assets/png/
+    - assets/png/zlak.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
